installed matplotlib and imported imread

--- a/source.ipynb
+++ b/source.ipynb
@@ -63,6 +63,7 @@
    "source": [
     "from PIL import Image\n",
     "import pandas as pd\n",
+    "from matplotlib.image import imread\n",
     "\n",
     "light_pollution = Image.open(\"data/LP_world2024B_low3.png\")\n",
     "light_pollution.show()"
