loaded images as numpy arrays

--- a/source.ipynb
+++ b/source.ipynb
@@ -61,12 +61,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PIL import Image\n",
     "import pandas as pd\n",
-    "from matplotlib.image import imread\n",
-    "\n",
-    "light_pollution = Image.open(\"data/LP_world2024B_low3.png\")\n",
-    "light_pollution.show()"
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "from matplotlib.image import imread\n"
    ]
   },
   {
@@ -115,15 +113,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5600, 14400, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Open light pollution data\n",
+    "lp = Image.open(\"data/LP_world2024B_low3.png\")\n",
+    "lp.show()\n",
+    "lp_arr = imread(\"data/LP_world2024B_low3.png\")\n",
+    "print(lp_arr.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(529, 983, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Open clouds data\n",
+    "clouds = Image.open(\"data/Cloud_cover.jpg\")\n",
+    "clouds.show()\n",
+    "clouds_arr = imread(\"data/Cloud_cover.jpg\")\n",
+    "print(clouds_arr.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10800, 21600)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Open elevation data\n",
+    "elev_arr = imread(\"data/gebco_08_rev_elev_21600x10800.png\")\n",
+    "print(elev_arr.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1800, 3600)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Open population data\n",
+    "pop = Image.open(\"data/earth_pop_grayscale.jpeg\")\n",
+    "pop.show()\n",
+    "pop_arr = imread(\"data/earth_pop_grayscale.jpeg\")\n",
+    "print(pop_arr.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start your code here\n",
-    "cloud_cover = Image.open(\"data/Cloud_cover.jpg\")\n",
-    "elevation = Image.open(\"data/gebco_08_rev_elev_21600x10800.png\")\n",
-    "population = Image.open(\"data/earth_pop_grayscale.jpeg\")\n",
-    "humidity = pd.read_csv(\"data/GDL-Yearly-Average-Relative-Humidity.csv\")"
+    "# Open humidity data\n",
+    "humid = pd.read_csv(\"data/GDL-Yearly-Average-Relative-Humidity.csv\")"
    ]
   },
   {
@@ -158,7 +235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "final-project-iselekp-0vDWZs1J",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -172,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
