tested lin regression model

--- a/source.ipynb
+++ b/source.ipynb
@@ -2821,6 +2821,122 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pb</th>\n",
+       "      <th>NO2 AM</th>\n",
+       "      <th>NO2 1-hr</th>\n",
+       "      <th>SO2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>743</th>\n",
+       "      <td>-0.079521</td>\n",
+       "      <td>-0.091538</td>\n",
+       "      <td>0.067520</td>\n",
+       "      <td>1.266321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1010</th>\n",
+       "      <td>-0.079521</td>\n",
+       "      <td>-0.091538</td>\n",
+       "      <td>0.067520</td>\n",
+       "      <td>-0.124745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1123</th>\n",
+       "      <td>-0.079521</td>\n",
+       "      <td>-0.091538</td>\n",
+       "      <td>0.067520</td>\n",
+       "      <td>-0.124745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>-0.079521</td>\n",
+       "      <td>-0.091538</td>\n",
+       "      <td>0.067520</td>\n",
+       "      <td>-0.124745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>554</th>\n",
+       "      <td>-0.079521</td>\n",
+       "      <td>1.531024</td>\n",
+       "      <td>0.576169</td>\n",
+       "      <td>0.184381</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Pb    NO2 AM  NO2 1-hr       SO2\n",
+       "743  -0.079521 -0.091538  0.067520  1.266321\n",
+       "1010 -0.079521 -0.091538  0.067520 -0.124745\n",
+       "1123 -0.079521 -0.091538  0.067520 -0.124745\n",
+       "140  -0.079521 -0.091538  0.067520 -0.124745\n",
+       "554  -0.079521  1.531024  0.576169  0.184381"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_X = test_set.drop(columns='Lung cancer rate')\n",
+    "test_y = test_set['Lung cancer rate']\n",
+    "test_X_prep = pipeline.fit_transform(test_X)\n",
+    "test_X_prep = pd.DataFrame(test_X_prep, columns=test_X.columns, index=test_X.index)\n",
+    "test_X_prep.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00018661483596961863"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_predictions = lin_reg.predict(test_X_prep)\n",
+    "test_lin_rmse = root_mean_squared_error(test_y, test_predictions)\n",
+    "test_lin_rmse"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
